--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Karo Host For 900</title>
+<title>DEX's Host For 900</title>
 <style type="text/css">
 body {
   background-color: #1A1920;  
@@ -157,11 +157,11 @@ document.getElementById("clock").innerHTML = (Hour+":"+Minute);
 </head>
 <body class="bg-darker">
 <div id="container"  style="">
-<span id="date" ></span><span id="clock" ></span><h1 style='font-size:25px;text-align:center;color:yellow;'>Karo Host For PS4 900</h1>
+<span id="date" ></span><span id="clock" ></span><h1 style='font-size:25px;text-align:center;color:yellow;'>DEX's Host For PS4 900</h1>
 <h1 id=msgs2 style='font-size:25px;text-align:center;color:white;'>Status</h1>
 <div style="text-align:center"  id="MyItems">
-<a href="900Manual/index.html"><button style='font-size:22px;text-align:center;color:yellow' class="pointer" onMouseOver="msgs2.innerHTML='Karo Host Manual Exploit For 900'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual 9.00</B></button></a>
-<a href="900Auto/index.html"><button style='font-size:22px;text-align:center;color:yellow' class="pointer" onMouseOver="msgs2.innerHTML='Karo Host Auto Exploit For 900'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto 9.00</B></button></a>
+<a href="900Manual/index.html"><button style='font-size:22px;text-align:center;color:yellow' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Manual Exploit For 900'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual 9.00</B></button></a>
+<a href="900Auto/index.html"><button style='font-size:22px;text-align:center;color:yellow' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Host Auto Exploit For 900'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto 9.00</B></button></a>
 <div class="content" >
  	<div class="text" >
  	 <br><span class="yellow" >Designed, Ported and Compiled by :</span >&nbsp;&nbsp; <span class="hue" >Karo Sharifi</span>
