--- a/900Auto/index.html
+++ b/900Auto/index.html
@@ -24,16 +24,15 @@ background-size:cover;
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
  .content {
-  width:80%;
+  width:50%;
   height:15%;
-  margin-left:7.5%;
+  margin-left:25%;
   background:rgba(0,0,0,0.5);
   color:white;
   margin-top:1%;
-  font-size:25px;
+  font-size:15px;
   text-align:center;
   border-radius:30px;
-  padding:20px;
   line-height:12px;
   position:absolute;bottom:0px;
  }
@@ -698,8 +697,8 @@ Tools.style.display = "none";
 </div>
 <div class="content" >
  	    <div class="text" >
- 	        <br><span style="text-shadow: 4px 4px 4px black;" class="yellow" >Designed, Compiled by :</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >Karo Sharifi</span>
- 	        <br><br><br><br><span style="text-shadow: 4px 4px 4px black;" class="yellow" >Super Special Thanks To :</span >&nbsp;&nbsp; <a style="font-size:30px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Sleirsgoevy ,Al Azif ,ChendoChap ,SiSTRo ,Specter ,Znullptr ... </a>
+ 	        <br><br><br><span style="text-shadow: 4px 4px 4px black;" class="yellow" >Designed, Compiled by :</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >Karo Sharifi</span>
+ 	        <br><br><span style="text-shadow: 4px 4px 4px black;" class="yellow" >Super Special Thanks To :</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Sleirsgoevy ,Al Azif ,ChendoChap ,SiSTRo ,Specter ,Znullptr ... </a>
 	    </div>
 </div>
 <script>
