--- a/index.html
+++ b/index.html
@@ -42,16 +42,17 @@ button:hover {
  color: white;
 }
  .content {
-  width:80%;
-  margin-left:7.5%;
+  width:35%;
+  height:10%;
+  margin-left:33%;
   background:rgba(0,0,0,0.5);
   color:white;
   margin-top:1%;
-  font-size:25px;
+  font-size:15px;
   text-align:center;
   border-radius:30px;
-  padding:20px;
-  line-height:40px;
+  line-height:18px;
+  position:absolute;bottom:0px;
  }
  .title {
   font-size:40px;
