--- a/900Auto/index.html
+++ b/900Auto/index.html
@@ -29,12 +29,11 @@ background-size:cover;
   margin-left:25%;
   background:rgba(0,0,0,0.5);
   color:white;
-  margin-top:1%;
   font-size:15px;
   text-align:center;
   border-radius:30px;
-  line-height:12px;
-  position:absolute;bottom:0px;
+  line-height:10px;
+  position:absolute;bottom:30px;
  }
  .title {
   font-size:40px;
@@ -188,7 +187,7 @@ opacity:0.7;
 
     </style>
 <meta charset="utf-8">
-<title>Karo Host Auto Exploit 9.00</title>
+<title>DEX's Host Auto Exploit 9.00</title>
 		<script>
 			window.applicationCache.ondownloading=function(){document.getElementById("progress").innerHTML="Page Caching Started!";};
 			window.applicationCache.onprogress=function(a){document.getElementById("progress").innerHTML=(Math.round(100*(a.loaded/a.total)))+"%";};
