--- a/900Manual/index2.html
+++ b/900Manual/index2.html
@@ -502,6 +502,14 @@ function goldhen2414(){
      if(sessionStorage.Exploit!="yes"){setTimeout(poc, 500);} else {LoaderPL();}
 }
 
+function goldhen23(){
+    progress.innerHTML="GoldHEN 2.3 loading... please wait";
+    LoadedMSG="GoldHEN 2.3 Loaded";
+    PLfile = "goldhen_2.3.bin";
+    out_jb = "AllPL";
+     if(sessionStorage.Exploit!="yes"){setTimeout(poc, 500);} else {LoaderPL();}
+}
+
 function load_PS4Debug(){
     progress.innerHTML="PS4Debug loading... please wait"; LoadedMSG="PS4Debug Loaded";
     PLfile = "ps4debug.bin";
@@ -721,6 +729,7 @@ Tools.style.display = "none";
 <h1 id=progress style='font-size:25px;text-align:center;text-shadow: 4px 4px 4px black;color:white;'>Status</h1>
 <div id=all style="text-align:center;">
 <button id="button-Payload" onMouseOver="progress.innerHTML='GoldHEN v2.4b14 by SISTR0 for PS4 9.00'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen2414()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:#CEC52A' > GoldHEN v2.4</button>
+<button id="button-Payload" onMouseOver="progress.innerHTML='GoldHEN v2.3 by SISTR0 for PS4 9.00'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen23()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:#CEC52A' > GoldHEN v2.3</button>
 <button id="button-Payload" onMouseOver="progress.innerHTML='Copy json and shn files from USB to PS4'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_copych()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > Cheat Copy </button>
 <br><br>
 <button id="button-Payload" onMouseOver="progress.innerHTML='Binloader Port 9020 for PS4 9.00'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="Bloader()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > BinLoader </button>
