--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ button:hover {
    Year=dt.getFullYear();
 if (Minute < 10) { Minute = "0" + Minute; };
 if (Hour < 10) { Hour = "0" + Hour; };
-document.getElementById("date").innerHTML = (Day+"/"+Month+"/"+Year);
+document.getElementById("date").innerHTML = (Month+"/"+Day+"/"+Year);
 document.getElementById("clock").innerHTML = (Hour+":"+Minute);
   }
   
