--- a/900Auto/index.html
+++ b/900Auto/index.html
@@ -540,6 +540,11 @@ function load_Wilde(){
     out_jb = "AllPL";     load_poc();
 }
 
+function load_Queef(){
+    progress.innerHTML="Payload loading... please wait"; LoadedMSG="Payload Loaded";
+    PLfile = "BeefQueefMod-1.46.bin";
+    out_jb = "AllPL";     load_poc();
+}
 
 function load_ToDexE(){
     progress.innerHTML="ToDEX Enabling... please wait"; LoadedMSG="ToDex Enabled";
@@ -658,6 +663,7 @@ Tools.style.display = "none";
 <button style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' class="pointer" onMouseOver="msgs.innerHTML='back to base menu'"; onmouseout="msgs.innerHTML='9.00'" onclick="backall(); return false"> Back to Menu </button>
 <h1 style='text-shadow: 4px 4px 4px black;font-size:30px;text-align:center;text-shadow: 4px 4px 4px black;color:yellow;'>For running Mods turn on internet</h1>
 <button id="button-Payload" onMouseOver="progress.innerHTML='GTAV WildeModz 1.46'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_Wilde()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > WildeModz 1.46 </button>
+<button id="button-Payload" onMouseOver="progress.innerHTML='GTAV BeefQueefMod 1.46'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_Queef()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > BeefQueef 1.46 </button>
 <br><br><br></div>
 <div id=Linuxs style="text-align:center;display:none">
 <button style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' class="pointer" onMouseOver="msgs.innerHTML='back to base menu'"; onmouseout="msgs.innerHTML='9.00'" onclick="backall(); return false"> Back to Menu </button>
