--- a/900Manual/index.html
+++ b/900Manual/index.html
@@ -43,21 +43,21 @@ background-size:cover;
   font-weight:bolder;
   margin-bottom:10px;
  }
- .yellow {
-  color:yellow;
+ .red {
+  color:red;
  }
  .hue {
-  color:yellow;
+  color:red;
   padding:10px;
   border-radius:10px;
   animation:hue 5s linear infinite;
   -webkit-animation: hue 5s linear infinite;
-  box-shadow: 0px 0px 50px yellow;
+  box-shadow: 0px 0px 50px red;
   color:white;
   background:rgba(255,255,0,0.4);
  }
  .hue:hover{
-  color:yellow;
+  color:red;
   background:transparent;
  }
  @keyframes hue{
@@ -66,31 +66,31 @@ background-size:cover;
  -webkit-filter:hue-rotate(0deg);
  }
  10%{
- box-shadow: 0px 1px 50px yellow;
+ box-shadow: 0px 1px 50px red;
  }
  20%{
- box-shadow: 1px 1px 50px yellow;
+ box-shadow: 1px 1px 50px red;
  }
  30%{
- box-shadow: 1px 0px 50px yellow;
+ box-shadow: 1px 0px 50px red;
  }
  40%{
-  box-shadow: 1px -1px 50px yellow;
+  box-shadow: 1px -1px 50px red;
  }
  50%{
- box-shadow: 0px -1px 50px yellow;
+ box-shadow: 0px -1px 50px red;
  }
  60%{
- box-shadow: -1px -1px 50px yellow;
+ box-shadow: -1px -1px 50px red;
  }
  70%{
- box-shadow: -1px 0px 50px yellow;
+ box-shadow: -1px 0px 50px red;
  }
  80%{
- box-shadow: -1px 1px 50px yellow;
+ box-shadow: -1px 1px 50px red;
  }
  90%{
- box-shadow: 0px 1px 50px yellow;
+ box-shadow: 0px 1px 50px red;
  }
  100%{
  filter:hue-rotate(360deg);
@@ -164,10 +164,10 @@ button {
             text-align: center;
 }
 button:hover {
-            box-shadow: 0 5px 50px 0 white;
+            box-shadow: 0 5px 25px 0 white;
             color: white;
             border-radius: 10px;
-			background-color: #0F0F53;
+			background-color: #450000;
 }
 
 hr {
@@ -729,8 +729,8 @@ Tools.style.display = "none";
 <script src="kexploit.js"></script>
 <script src="webkit.js"></script>
 </head>
-<body style='background-color:#1A1920'>
-<h1 style='text-shadow: 4px 4px 4px black;font-size:30px;text-align:center;text-shadow: 4px 4px 4px black;color:yellow;margin-top:1%;'>Manual Exploit 9.00</h1>
+<body style='background-color:#000000'>
+<h1 style='text-shadow: 4px 4px 4px black;font-size:30px;text-align:center;text-shadow: 4px 4px 4px black;color:red;margin-top:1%;'>Manual Exploit 9.00</h1>
 <h1 id=progress style='font-size:25px;text-align:center;text-shadow: 4px 4px 4px black;color:white;'>Status</h1>
 <div id=all style="text-align:center;">
 <button id="button-Payload" onMouseOver="progress.innerHTML='GoldHEN v2.4b14 by SISTR0 for PS4 9.00'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen2414()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:#CEC52A' > GoldHEN v2.4</button>
@@ -767,7 +767,7 @@ Tools.style.display = "none";
 </div>
 <div id=gtav style="text-align:center;display:none">
 <button style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' class="pointer" onMouseOver="msgs.innerHTML='back to base menu'"; onmouseout="msgs.innerHTML='9.00'" onclick="backall(); return false"> Back to Menu </button>
-<h1 style='text-shadow: 4px 4px 4px black;font-size:30px;text-align:center;text-shadow: 4px 4px 4px black;color:yellow;'>For running Mods turn on internet</h1>
+<h1 style='text-shadow: 4px 4px 4px black;font-size:30px;text-align:center;text-shadow: 4px 4px 4px black;color:red;'>Injecting Payloads Needs Internet</h1>
 <button id="button-Payload" onMouseOver="progress.innerHTML='GTAV WildeModz 1.46'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_Wilde()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > WildeModz 1.46 </button>
 <button id="button-Payload" onMouseOver="progress.innerHTML='GTAV BeefQueefMod 1.46'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_Queef()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > BeefQueef 1.46 </button>
 
@@ -818,8 +818,8 @@ Tools.style.display = "none";
 </div>
 <div class="content" >
  	    <div class="text" >
- 	        <br><br><br><span style="text-shadow: 4px 4px 4px black;" class="yellow" >Designed, Compiled by :</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >Karo Sharifi</span>
- 	        <br><br><span style="text-shadow: 4px 4px 4px black;" class="yellow" >Super Special Thanks To :</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Sleirsgoevy ,Al Azif ,ChendoChap ,SiSTRo ,Specter ,Znullptr ... </a>
+ 	        <br><br><br><span style="text-shadow: 4px 4px 4px black;" class="red" >Edited by :</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >illusional</span>
+ 	        <br><br><span style="text-shadow: 4px 4px 4px black;" class="red" >Super Special Thanks To :</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Sleirsgoevy ,Al Azif ,ChendoChap ,SiSTRo ,Specter ,Znullptr, Karo Sharifi</a>
 	    </div>
 </div>
 <script>
