--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>DEX's Host For 9.00</title>
 <style type="text/css">
 body {
-  background-color: #1A1920;  
+  background-color: #000000;  
   background-repeat:no-repeat;
   height:95%;
  }
@@ -20,8 +20,8 @@ body {
             margin: 6px;
 }
 button:hover {
-            box-shadow: 0 5px 50px 0 white;
-            background-color: #0F0F53;
+            box-shadow: 0 5px 35px 0 white;
+            background-color: #450000;
             color: white;
             border-radius: 10px;
 }
@@ -45,21 +45,21 @@ button:hover {
   font-weight:bolder;
   margin-bottom:10px;
  }
- .yellow {
-  color:yellow;
+ .red {
+  color:red;
  }
  .hue {
-  color:yellow;
+  color:red;
   padding:10px;
   border-radius:10px;
   animation:hue 5s linear infinite;
   -webkit-animation: hue 5s linear infinite;
-  box-shadow: 0px 0px 50px yellow;
+  box-shadow: 0px 0px 50px red;
   color:white;
   background:rgba(255,255,0,0.4);
  }
  .hue:hover{
-  color:yellow;
+  color:red;
   background:transparent;
  }
  @keyframes hue{
@@ -68,31 +68,31 @@ button:hover {
  -webkit-filter:hue-rotate(0deg);
  }
  10%{
- box-shadow: 0px 1px 50px yellow;
+ box-shadow: 0px 1px 50px red;
  }
  20%{
- box-shadow: 1px 1px 50px yellow;
+ box-shadow: 1px 1px 50px red;
  }
  30%{
- box-shadow: 1px 0px 50px yellow;
+ box-shadow: 1px 0px 50px red;
  }
  40%{
-  box-shadow: 1px -1px 50px yellow;
+  box-shadow: 1px -1px 50px red;
  }
  50%{
- box-shadow: 0px -1px 50px yellow;
+ box-shadow: 0px -1px 50px red;
  }
  60%{
- box-shadow: -1px -1px 50px yellow;
+ box-shadow: -1px -1px 50px red;
  }
  70%{
- box-shadow: -1px 0px 50px yellow;
+ box-shadow: -1px 0px 50px red;
  }
  80%{
- box-shadow: -1px 1px 50px yellow;
+ box-shadow: -1px 1px 50px red;
  }
  90%{
- box-shadow: 0px 1px 50px yellow;
+ box-shadow: 0px 1px 50px red;
  }
  100%{
  filter:hue-rotate(360deg);
@@ -125,14 +125,14 @@ button:hover {
 </head>
 <body class="bg-darker">
 <div id="container"  style="">
-<span id="date" ></span><span id="clock" ></span><h1 style='font-size:25px;text-align:center;float:5%;color:yellow;'>DEX's Host For PS4 9.00</h1>
+<span id="date" ></span><span id="clock" ></span><h1 style='font-size:25px;text-align:center;float:5%;color:red;'>DEX's Host For PS4 9.00</h1>
 <h1 id=msgs2 style='font-size:25px;text-align:center;color:white;'>Status</h1>
 <div style="text-align:center"  id="MyItems">
-<a href="900Manual/index.html"><button style='font-size:22px;text-align:center;color:yellow' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Manual Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual 9.00</B></button></a>
-<a href="900Auto/index.html"><button style='font-size:22px;text-align:center;color:yellow' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Host Auto Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto 9.00</B></button></a>
+<a href="900Manual/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Manual Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual 9.00</B></button></a>
+<a href="900Auto/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Host Auto Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto 9.00</B></button></a>
 <div class="content" >
  	<div class="text" >
- 	 <br><span class="yellow" >Designed, Ported and Compiled by :</span >&nbsp;&nbsp; <span class="hue" >Karo Sharifi</span>
+ 	 <br><span class="red" >Edited by :</span >&nbsp;&nbsp; <span class="hue" >illusional</span>
  	</div>
  </div>
 </div>
