--- a/900Auto/index.html
+++ b/900Auto/index.html
@@ -33,7 +33,7 @@ background-size:cover;
   text-align:center;
   border-radius:30px;
   line-height:10px;
-  position:absolute;bottom:30px;
+  position:absolute;bottom:50px;
  }
  .title {
   font-size:40px;
@@ -712,7 +712,7 @@ Tools.style.display = "none";
 <div class="content" >
  	    <div class="text" >
  	        <br><br><br><span style="text-shadow: 4px 4px 4px black;" class="red" >Edited by :</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >illusional</span>
- 	        <br><br><span style="text-shadow: 4px 4px 4px black;" class="red" >Super Special Thanks To :</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Sleirsgoevy ,Al Azif ,ChendoChap ,SiSTRo ,Specter ,Znullptr, Karo Sharifi</a>
+ 	        <br><br><br><br><br><span style="text-shadow: 4px 4px 4px black;" class="red" >Thanks To :</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Sleirsgoevy ,Al Azif ,ChendoChap ,SiSTRo ,Specter ,Znullptr, Karo Sharifi</a>
 	    </div>
 </div>
 <script>
