--- a/900Auto/index.html
+++ b/900Auto/index.html
@@ -75,7 +75,7 @@ background-size:cover;
  box-shadow: 1px 0px 50px red;
  }
  40%{
-  box-shadow: 1px -1px 50px red;
+ box-shadow: 1px -1px 50px red;
  }
  50%{
  box-shadow: 0px -1px 50px red;
@@ -711,8 +711,8 @@ Tools.style.display = "none";
 </div>
 <div class="content" >
  	    <div class="text" >
- 	        <br><br><br><span style="text-shadow: 4px 4px 4px black;" class="red" >Edited by :</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >illusional</span>
- 	        <br><br><br><br><br><span style="text-shadow: 4px 4px 4px black;" class="red" >Thanks To :</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Sleirsgoevy ,Al Azif ,ChendoChap ,SiSTRo ,Specter ,Znullptr, Karo Sharifi</a>
+ 	        <br><br><br><span style="text-shadow: 4px 4px 4px black;font-size:20px" class="red" >Edited by:</span >&nbsp;&nbsp; <span style="text-shadow: 4px 4px 4px black;" class="hue" >illusional</span>
+ 	        <br><br><br><br><br><span style="text-shadow: 4px 4px 4px black;font-size:20px" class="red" >Thanks To:</span >&nbsp;&nbsp; <a style="font-size:15px;text-align:center;text-shadow: 4px 4px 4px black;color:white;">Sleirsgoevy ,Al Azif ,ChendoChap ,SiSTRo ,Specter ,Znullptr, Karo Sharifi</a>
 	    </div>
 </div>
 <script>
