--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ button:hover {
  box-shadow: 1px 0px 50px red;
  }
  40%{
-  box-shadow: 1px -1px 50px red;
+ box-shadow: 1px -1px 50px red;
  }
  50%{
  box-shadow: 0px -1px 50px red;
@@ -132,7 +132,7 @@ button:hover {
 <a href="900Auto/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Host Auto Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto 9.00</B></button></a>
 <div class="content" >
  	<div class="text" >
- 	 <br><span class="red" >Edited by :</span >&nbsp;&nbsp; <span class="hue" >illusional</span>
+ 	 <br><span style="font-size:20px"<span class="red" >Edited by:</span >&nbsp;&nbsp; <span class="hue" >illusional</span>
  	</div>
  </div>
 </div>
