--- a/index.html
+++ b/index.html
@@ -54,12 +54,9 @@ button:hover {
   border-radius:10px;
   animation:hue 5s linear infinite;
   -webkit-animation: hue 5s linear infinite;
-  box-shadow: 0px 0px 50px red;
-  color:white;
-  background:rgba(255,255,0,0.4);
+    box-shadow: 0px 0px 25px red;
  }
  .hue:hover{
-  color:red;
   background:transparent;
  }
  @keyframes hue{
@@ -68,31 +65,31 @@ button:hover {
  -webkit-filter:hue-rotate(0deg);
  }
  10%{
- box-shadow: 0px 1px 50px red;
+ box-shadow: 0px 1px 25px red;
  }
  20%{
- box-shadow: 1px 1px 50px red;
+ box-shadow: 1px 1px 25px red;
  }
  30%{
- box-shadow: 1px 0px 50px red;
+ box-shadow: 1px 0px 25px red;
  }
  40%{
- box-shadow: 1px -1px 50px red;
+ box-shadow: 1px -1px 25px red;
  }
  50%{
- box-shadow: 0px -1px 50px red;
+ box-shadow: 0px -1px 25px red;
  }
  60%{
- box-shadow: -1px -1px 50px red;
+ box-shadow: -1px -1px 25px red;
  }
  70%{
- box-shadow: -1px 0px 50px red;
+ box-shadow: -1px 0px 25px red;
  }
  80%{
- box-shadow: -1px 1px 50px red;
+ box-shadow: -1px 1px 25px red;
  }
  90%{
- box-shadow: 0px 1px 50px red;
+ box-shadow: 0px 1px 25px red;
  }
  100%{
  filter:hue-rotate(360deg);
@@ -125,7 +122,7 @@ button:hover {
 </head>
 <body class="bg-darker">
 <div id="container"  style="">
-<span id="date" ></span><span id="clock" ></span><h1 style='font-size:25px;text-align:center;float:5%;color:red;'>DEX's Host For PS4 9.00</h1>
+<h1 style='font-size:25px;text-align:center;color:red;'>DEX's Host For PS4 9.00</h1>
 <h1 id=msgs2 style='font-size:25px;text-align:center;color:white;'>Status</h1>
 <div style="text-align:center"  id="MyItems">
 <a href="900Manual/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Manual Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual 9.00</B></button></a>
