--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@ body {
  }
  button {
             background:rgba(0,0,0,0.5);
-		    box-shadow: 0 5px 20px 0 white;
-            border: 2px solid black;
+            border: 1px solid grey;
             border-radius: 10px;
-            width: 170px;
+            width: 230px;
             height: 43px;            
             text-align: center;
             padding: 6px;
             margin: 6px;
 }
 button:hover {
-            box-shadow: 0 5px 35px 0 white;
-            background-color: #450000;
-            color: white;
-            border-radius: 10px;
+			border: 1px solid red;
+			border-radius: 10px;
 }
  .content {
   width:35%;
@@ -54,7 +51,7 @@ button:hover {
   border-radius:10px;
   animation:hue 5s linear infinite;
   -webkit-animation: hue 5s linear infinite;
-    box-shadow: 0px 0px 25px red;
+  box-shadow: 0px 0px 25px red;
  }
  .hue:hover{
   background:transparent;
@@ -127,8 +124,8 @@ button:hover {
 <div style="text-align:center"  id="MyItems">
 <a href="900Manual/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Manual Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual 9.00</B></button></a>
 <a href="900Auto/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Auto Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto 9.00</B></button></a>
-<a href="900ManualPSFree/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's PSFree Manual Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>mPSFree 9.00</B></button></a>
-<a href="900AutoPSFree/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's PSFree Auto Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>aPSFree 9.00</B></button></a>
+<a href="900ManualPSFree/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's PSFree Manual Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual PSFree 9.00</B></button></a>
+<a href="900AutoPSFree/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's PSFree Auto Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto PSFree 9.00</B></button></a>
 <div class="content" >
  	<div class="text" >
  	 <br><span style="font-size:20px"<span class="red" >Edited by:</span >&nbsp;&nbsp; <span class="hue" >illusional</span>
