--- a/900AutoPSFree/index.html
+++ b/900AutoPSFree/index.html
@@ -154,18 +154,15 @@ overflow: hidden;
 }
 button {
             background:rgba(0,0,0,0.5);
-			box-shadow: 0 5px 20px 0 white;
-            border: 2px solid black;
+            border: 1px solid grey;
             border-radius: 10px;
             width: 173px;
             height: 40px;            
             text-align: center;
 }
 button:hover {
-            box-shadow: 0 5px 25px 0 white;
-            color: white;
-            border-radius: 10px;
-			background-color: #450000;
+			border: 1px solid red;
+			border-radius: 10px;
 }
 
 hr {
