--- a/900Manual/index2.html
+++ b/900Manual/index2.html
@@ -153,18 +153,15 @@ background-size:cover;
 }
 button {
             background:rgba(0,0,0,0.5);
-			box-shadow: 0 5px 20px 0 white;
-            border: 2px solid black;
+            border: 1px solid grey;
             border-radius: 10px;
             width: 173px;
             height: 40px;            
             text-align: center;
 }
 button:hover {
-            box-shadow: 0 5px 25px 0 white;
-            color: white;
-            border-radius: 10px;
-			background-color: #450000;
+			border: 1px solid red;
+			border-radius: 10px;
 }
 
 hr {
