--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@ button:hover {
 </style>
 </head>
 <body class="bg-darker">
-<div id="container"  style="">
+<div id="container"  style="color: red">
 <h1 style='font-size:25px;text-align:center;color:red;'>DEX's Host For PS4 9.00</h1>
 <h1 id=msgs2 style='font-size:25px;text-align:center;color:white;'>Status</h1>
 <div style="text-align:center"  id="MyItems">
-<a href="900Manual/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Manual Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual 9.00</B></button></a>
-<a href="900Auto/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's Auto Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto 9.00</B></button></a>
-<a href="900ManualPSFree/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's PSFree Manual Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual PSFree 9.00</B></button></a>
-<a href="900AutoPSFree/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEX's PSFree Auto Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto PSFree 9.00</B></button></a>
+<a href="900Manual/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs Manual Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual 9.00</B></button></a>
+<a href="900Auto/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs Auto Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto 9.00</B></button></a>
+<a href="900ManualPSFree/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs PSFree Manual Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Manual PSFree 9.00</B></button></a>
+<a href="900AutoPSFree/index.html"><button style='font-size:22px;text-align:center;color:red' class="pointer" onMouseOver="msgs2.innerHTML='DEXs PSFree Auto Exploit For 9.00'"; onmouseout="msgs2.innerHTML='Status'"  type="button"><B>Auto PSFree 9.00</B></button></a>
 <div class="content" >
  	<div class="text" >
  	 <br><span style="font-size:20px"<span class="red" >Edited by:</span >&nbsp;&nbsp; <span class="hue" >illusional</span>
