--- a/900AutoPSFree/index.html
+++ b/900AutoPSFree/index.html
@@ -707,7 +707,7 @@ Tools.style.display = "none";
 <br>
 </div>
 <div id=Linuxs style="text-align:center;display:none">
-<button style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' class="pointer" onMouseOver="progress.innerHTML='back to base menu'"; onmouseout="progress.innerHTML='DEX's Host 9.00'" onclick="backall(); return false"> Back to Menu </button>
+<button style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' class="pointer" onMouseOver="progress.innerHTML='back to base menu'"; onmouseout="progress.innerHTML='DEXs Host 9.00'" onclick="backall(); return false"> Back to Menu </button>
 <br><br>
 <button  onMouseOver="progress.innerHTML='LinuxLoader 1gb by PSXITA'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="Linux1N()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white'>Linux PSXITA 1GB</button>
 <button  onMouseOver="progress.innerHTML='LinuxLoader 2gb by PSXITA'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="Linux2N()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white'>Linux PSXITA 2GB</button>
@@ -725,7 +725,7 @@ Tools.style.display = "none";
 <br><br><br>
 </div>
 <div id=Tools style="text-align:center;display:none">
-<button style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' class="pointer" onMouseOver="progress.innerHTML='back to base menu'"; onmouseout="progress.innerHTML='DEX's Host 9.00'" onclick="backall(); return false"> Back to Menu </button>
+<button style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' class="pointer" onMouseOver="progress.innerHTML='back to base menu'"; onmouseout="progress.innerHTML='DEXs Host 9.00'" onclick="backall(); return false"> Back to Menu </button>
 <br><br>
 <button id="button-Payload" onMouseOver="progress.innerHTML='Create a backup of important database files ans User Data'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_BackupDB()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > DB Backup </button>
 <button id="button-Payload" onMouseOver="progress.innerHTML='Restore a backup of the database files and User Data'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_RestoreDB()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > DB Restore </button>
@@ -737,7 +737,7 @@ Tools.style.display = "none";
 <br><br><br>
 </div>
 <div id=Dumpers style="text-align:center;display:none">
-<button style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' class="pointer" onMouseOver="progress.innerHTML='back to base menu'"; onmouseout="progress.innerHTML='DEX's Host 9.00'" onclick="backall(); return false"> Back to Menu </button>
+<button style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' class="pointer" onMouseOver="progress.innerHTML='back to base menu'"; onmouseout="progress.innerHTML='DEXs Host 9.00'" onclick="backall(); return false"> Back to Menu </button>
 <br><br>
 <button id="button-Payload" onMouseOver="progress.innerHTML='PS4 PKG Backup by Kameleon'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_pkgb()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > PKG Backup </button>
 <br><br>
