--- a/PSFree-Lapse/index.html
+++ b/PSFree-Lapse/index.html
@@ -18,7 +18,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>PSFree-Lapse Exploit For PS4 9.00</title>
+        <title>PSFree-Lapse Exploit</title>
         <style>
 			html {
 				background-color: black;
